--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -161,14 +161,14 @@
                         <CheckBox x:Name="cbSortByDate" Content="Datum" Canvas.Left="297" Canvas.Top="207" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" TabIndex="20"/>
                         <CheckBox x:Name="cbSortByName" Content="Namn" Canvas.Left="368" Canvas.Top="209" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" TabIndex="22"/>
                         <Label Content="Sortering" Canvas.Left="216" Canvas.Top="201" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                        <Button x:Name="btnShowReports" Content="Visa Rapporter" Canvas.Left="333" Canvas.Top="512" Width="95" Background="Black" Foreground="White" Height="23" TabIndex="31" Click="btnShowReports_Click"/>
+                        <Button x:Name="btnShowReports" Content="Visa Rapporter" Canvas.Left="321" Canvas.Top="495" Width="107" Background="Black" Foreground="White" Height="23" TabIndex="31" Click="btnShowReports_Click"/>
                         <TextBox x:Name="tbSearchUser" Height="23" Canvas.Left="30" TextWrapping="Wrap" Text="" Canvas.Top="155" Width="294" Background="Black" Foreground="White" TabIndex="8"/>
                         <Button x:Name="btnSearchUser1" Content="Sök" Canvas.Left="329" Canvas.Top="155" Width="99" Background="Black" Foreground="White" Height="23" Click="btnSearchUser1_Click"/>
                         <TextBox x:Name="tbBoss" Height="23" Canvas.Left="580" TextWrapping="Wrap" Text="" Canvas.Top="189" Width="120" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="6"/>
                         <Label x:Name="lbUserID" Content="Anst. nr" Canvas.Left="456" Canvas.Top="36" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                         <TextBox x:Name="tbUserID" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="42" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" IsTabStop="False"/>
                         <ListBox x:Name="listBoxUsers" Height="166" Width="398" Canvas.Left="30" Background="Black" Foreground="White" Canvas.Top="-16" IsTabStop="True" TabIndex="7" SelectionChanged="listBoxUsers_SelectionChanged_1"/>
-                        <ListView x:Name="lvCountriesEdit" Height="176" Canvas.Left="30" Canvas.Top="565" Width="398" RenderTransformOrigin="-2.41,0.58" Background="Black" TabIndex="12" SelectionChanged="lvCountriesEdit_SelectionChanged_1" Foreground="White">
+                        <ListView x:Name="lvCountriesEdit" Height="176" Canvas.Left="30" Canvas.Top="589" Width="398" RenderTransformOrigin="-2.41,0.58" Background="Black" TabIndex="12" SelectionChanged="lvCountriesEdit_SelectionChanged_1" Foreground="White">
                             <ListView.View>
                                 <GridView>
                                     <GridViewColumn/>
@@ -184,10 +184,12 @@
                         <Button x:Name="btnAddCountry" Content="Lägg till" Canvas.Left="467" Canvas.Top="679" Width="75" Background="Black" Foreground="White" TabIndex="33" Click="btnAddCountry_Click_2"/>
                         <Button x:Name="btnUpdateCountry" Content="Uppdatera" Canvas.Left="547" Canvas.Top="679" Width="88" Background="Black" Foreground="White" TabIndex="34" Click="btnUpdateCountry_Click"/>
                         <Button x:Name="btnRemoveCountry" Content="Ta bort" Canvas.Left="643" Canvas.Top="679" Width="75" RenderTransformOrigin="-0.227,0.63" Foreground="White" Background="Black" TabIndex="35" Click="btnRemoveCountry_Click"/>
-                        <Label Content="Välj ett land att uppdatera eller lägg till nytt" Canvas.Left="30" Canvas.Top="539" RenderTransformOrigin="-1.322,0.379" Foreground="White"/>
+                        <Label Content="Välj ett land att uppdatera eller lägg till nytt" Canvas.Left="30" Canvas.Top="555" RenderTransformOrigin="-1.322,0.379" Foreground="White"/>
                         <Button x:Name="btnLogOutChef" Content="Logga ut" Canvas.Left="721" Canvas.Top="6" Width="75" RenderTransformOrigin="0.413,-0.391" Background="White" Foreground="Black" Click="btnLogOutChef_Click" Visibility="Hidden"/>
                         <Button x:Name="btnFillListWithUsersIAmBossFor" Content="Visa användare jag är auktoriserad att godkänna rapporter för" Canvas.Left="30" Canvas.Top="-41" Width="398" RenderTransformOrigin="0.413,-0.391" Background="White" Foreground="Black" FontSize="12" Click="btnFillListWithUsersIAmBossFor_Click"/>
                         <ListBox x:Name="lbShowReports" Height="251" Canvas.Left="30" Canvas.Top="242" Width="398"/>
+                        <Button x:Name="btnSearchReport" Content="Sök" Canvas.Left="333" Canvas.Top="526" Width="95"/>
+                        <TextBox x:Name="tbSearchReport" Height="23" Canvas.Left="44" TextWrapping="Wrap" Canvas.Top="527" Width="280" RenderTransformOrigin="0.454,0.148"/>
 
                     </Canvas>
                 </TabItem>
