--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -189,8 +189,8 @@
                         <Button x:Name="btnLogOutChef" Content="Logga ut" Canvas.Left="721" Canvas.Top="6" Width="75" RenderTransformOrigin="0.413,-0.391" Background="White" Foreground="Black" Click="btnLogOutChef_Click" Visibility="Hidden"/>
                         <Button x:Name="btnFillListWithUsersIAmBossFor" Content="Visa användare jag är auktoriserad att godkänna rapporter för" Canvas.Left="30" Canvas.Top="-41" Width="398" RenderTransformOrigin="0.413,-0.391" Background="White" Foreground="Black" FontSize="12" Click="btnFillListWithUsersIAmBossFor_Click"/>
                         <ListBox x:Name="lbShowReports" Height="251" Canvas.Left="30" Canvas.Top="242" Width="398" Background="Black" Foreground="White"/>
-                        <Button x:Name="btnSearchReport" Content="Sök" Canvas.Left="333" Canvas.Top="526" Width="95"/>
-                        <TextBox x:Name="tbSearchReport" Height="23" Canvas.Left="44" TextWrapping="Wrap" Canvas.Top="527" Width="280" RenderTransformOrigin="0.454,0.148"/>
+                        <Button x:Name="btnSearchReport" Content="Sök" Canvas.Left="226" Canvas.Top="495" Width="36" RenderTransformOrigin="0.505,0.304" Background="Black" Foreground="White"/>
+                        <TextBox x:Name="tbSearchReport" Height="23" Canvas.Left="30" TextWrapping="Wrap" Canvas.Top="495" Width="193" RenderTransformOrigin="0.454,0.148" Foreground="White" Background="Black"/>
                         <Button x:Name="btnLogInChef" Content="Logga in" Height="84" Width="75" Canvas.Left="721" Canvas.Top="-77" Background="Black" Foreground="White" Click="btnLogInChef_Click"/>
 
                     </Canvas>
