Danger_Updated_Gui_WorkingShitRightNOw_Email_ETC

--- a/Scrumproject/GUI/ForgottenPasswordWindow.xaml
+++ b/Scrumproject/GUI/ForgottenPasswordWindow.xaml
@@ -7,7 +7,7 @@
             <Label x:Name="lbForgottenPassword" Content="Har du glömt ditt lösenord?" Canvas.Left="10" Canvas.Top="10" FontSize="16"/>
             <Label x:Name="lbForgottenUsername" Content="Ange Användarnamn: " Canvas.Left="10" Canvas.Top="41"/>
             <TextBox x:Name="tbForgottenUsername" Height="23" Canvas.Left="10" TextWrapping="Wrap" Text="" Canvas.Top="67" Width="120" Background="Black" Foreground="White"/>
-            <Button x:Name="ButtonSendForgotten" Content="Skicka" Canvas.Left="194" Canvas.Top="109" Width="75" Background="Black" Foreground="white"/>
+            <Button x:Name="ButtonSendForgotten" Content="Skicka" Canvas.Left="194" Canvas.Top="109" Width="75" Background="Black" Foreground="white" Click="ButtonSendForgotten_Click"/>
 
         </Canvas>
     </Grid>
